hphp/hack/test/typecheck/sound_dynamic_marker_types_is_as.php
<?hh

function f(): void {
  4 as HH\FIXME\POISON_MARKER<string>;
}
